# job-agent

./: .gitignore  Makefile  README.md  profile.md  pyproject.toml  requirements.txt  scoring.config.json  scoring.example.json  search.config.json
.claude/: CLAUDE.md
.claude/commands/: build.md  check.md  commit.md  fix.md  pr.md  test.md
.forgejo/workflows/: search.yml
.github/workflows/: build-profile.yml  create-profile.yml  deploy-dev.yml  deploy.yml  rebuild-profile.yml  search.yml  tests.yml
docs/: app.js  index.html  offers.json  profiles.json  style.css  tracking.json
docs/0f93bb9c28/: offers.json
docs/49476c5d5b/: offers.json
docs/6b6b7740ef/: offers.json
docs/b934bf81b4/: offers.json
docs/demo/: offers.json
docs/f5e0f36f34/: offers.json
docs/js/: constants.js  github-api.js  onboarding.js
docs/maman/: offers.json
docs/yohan/: offers.json
profiles/0f93bb9c28/: meta.json
profiles/49476c5d5b/: meta.json  profile.md  scoring.config.json  search.config.json
profiles/b934bf81b4/: profile.md  search.config.json
profiles/maman/: meta.json
profiles/yohan/: meta.json
scripts/: apply_profile_config.py  build_offers.py  create_profile_from_issue.py  setup_demo.py
src/: cli.py  dedup.py  france_travail.py  la_bonne_alternance.py  rerank.py  semantic.py
tests/: test_apply_profile_config.py  test_dedup.py  test_france_travail.py  test_rerank.py  test_scoring.py  test_semantic.py
worker/: index.js  wrangler.toml
